--- a/projects.html
+++ b/projects.html
@@ -321,7 +321,8 @@ evaluated [2]. A short demonstration in German can be found
 
         <p>Project contact: <br>
   <a target="_blank" href="mailto:dcleres@ethz.ch">David Cleres</a>
-  <br> <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a><br></p>
+  <br> <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a><br>
+  <a target="_blank" href="mailto:fanwu@ethz.ch">Fan Wu</a></p>
       </div>
 
 </div>
