--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 
   <div class="card-body pb-0 text-center">
-        <p>Office: WEV G219 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br>
+        <p>Office: WEV G214 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br>
   <!-- **Phone:** <br/> -->
   Contact: <a target="_blank" href="mailto:fbarata@ethz.ch">fbarata@ethz.ch</a><br>
   <!-- **Teaching:** [Computer Security Spring'21](https://www.traviswpeters.com/cs476-2021-spring/)<br/> -->
@@ -195,6 +195,12 @@ to provide insight into biological biomarkers by answering clinically relevant r
 <div class="col-md-9 order-4">
 
     <h2 id="news">News</h2>
+
+    <p><i class="far fa-newspaper"></i> <strong>February 13, 2022</strong><br>I am excited to announce that our paper <b>TripletCough: Cougher Identification and Verification from Contact-Free Smartphone-Based Audio Recordings Using Metric Learning</b> got accepted at the IEEE Journal of Biomedical and Health Informatics! Early release manuscript is available <a href="https://ieeexplore.ieee.org/document/9720192" target="_blank" rel="noopener noreferrer">here</a>.</p>
+
+    <p><i class="far fa-newspaper"></i> <strong>January 03, 2022</strong><br>I am excited to announce that <b>Jinjoo Shim</b> started at our group! She will be working on the digitalization of of inflammatory biomarkers for chronic systemic inflammation.</p>
+
+    <p><i class="far fa-newspaper"></i> <strong>October 01, 2021</strong><br>I am excited to announce that <b>Fan Wu</b> started at our group! She will be working on digital vocal biomarkers for patients with congestive heart failure</p>
 
     <p><i class="far fa-newspaper"></i> <strong>July 14, 2021</strong><br>I am excited to announce that our paper <b>Lena: a Voice-Based Conversational Agent for Remote Patient Monitoring in Chronic Obstructive Pulmonary Disease</b> with David Cleres, Frank Rassouli, Martin Brutsche, Tobias Kowatsch, and Filipe Barata has been published at the <a href="http://ceur-ws.org/Vol-2903/" target="_blank" rel="noopener noreferrer">Healthy Interfaces Workshop - HEALTHI</a> collocated with the <a href="https://iui.acm.org/2021/" target="_blank" rel="noopener noreferrer">ACM IUI 2021</a> Manuscript is available <a href="papers/Cleres2021-HEALTHI.pdf">here</a>.</p>
 
