--- a/news.html
+++ b/news.html
@@ -135,6 +135,12 @@
 
 <h2 id="news">News</h2>
 
+<p><i class="far fa-newspaper"></i> <strong>February 13, 2022</strong><br>I am excited to announce that our paper <b>TripletCough: Cougher Identification and Verification from Contact-Free Smartphone-Based Audio Recordings Using Metric Learning</b> got accepted at the IEEE Journal of Biomedical and Health Informatics! Early release manuscript is available <a href="https://ieeexplore.ieee.org/document/9720192" target="_blank" rel="noopener noreferrer">here</a>.</p>
+
+<p><i class="far fa-newspaper"></i> <strong>January 03, 2022</strong><br>I am excited to announce that <b>Jinjoo Shim</b> started at our group! She will be working on the digitalization of of inflammatory biomarkers for chronic systemic inflammation.</p>
+
+<p><i class="far fa-newspaper"></i> <strong>October 01, 2021</strong><br>I am excited to announce that <b>Fan Wu</b> started at our group! She will be working on digital vocal biomarkers for patients with congestive heart failure</p>
+
 <p><i class="far fa-newspaper"></i> <strong>July 14, 2021</strong><br>I am excited to announce that our paper <b>Lena: a Voice-Based Conversational Agent for Remote Patient Monitoring in Chronic Obstructive Pulmonary Disease</b> with David Cleres, Frank Rassouli, Martin Brutsche, Tobias Kowatsch, and Filipe Barata has been published at the <a href="http://ceur-ws.org/Vol-2903/" target="_blank" rel="noopener noreferrer">Healthy Interfaces Workshop - HEALTHI</a> collocated with the <a href="https://iui.acm.org/2021/" target="_blank" rel="noopener noreferrer">ACM IUI 2021</a> Manuscript is available <a href="papers/Cleres2021-HEALTHI.pdf">here</a>.</p>
 
 <p><i class="far fa-newspaper"></i> <strong>June 01, 2021</strong><br>Today, it was a great pleasure to present at the international workshop “<a href="https://sites.google.com/services.hevra.haifa.ac.il/rpdm/ai-based-remote-patient-monitoring-and-diagnosis-in-the-pandemic-age-and-be" target="_blank" rel="noopener noreferrer">AI based Remote Patient Monitoring and Diagnosis in the pandemic age and beyond (RPDM)</a>”, Department of Computer Science, at the University of Haifa, Israel</p>
