--- a/projects.html
+++ b/projects.html
@@ -135,11 +135,81 @@
 <h2 id="projects--">Projects  <a href="https://github.com/ADAMMA-CDHI-ETH-Zurich" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a>
 </h2>
 
+<!-- Row 3 -->
+<!-- PROJECT 3 -->
+<div class="row">
+
+<div class="col-md-3 order-1 mt-3">
+    <p><br>
+<!-- contact info --></p>
+    <div class="card shadow">
+
+  <img id="mypic" src="/assets/chf_v2.png" class="border-0 card-img-top" alt="me">
+
+
+  <div class="card-body pb-0 text-center">
+
+        <p>Project contact: <br>
+  <a target="_blank" href="mailto:fanwu@ethz.ch">Fan Wu</a><br>
+   <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a><br></p>
+      </div>
+
+</div>
+
+  </div>
+
+<div class="col-md-9 order-2 mt-3">
+    <h2 id="voice-monitoring-system-for-patients-with-congestive-heart-failure">Voice Monitoring System for Patients with Congestive Heart Failure</h2>
+    <p style="text-align:justify">
+<b>Congestive Heart failure</b> (CHF) is characterised by the heart’s incapacity to pump sufficient blood to meet the body’s metabolic needs. It afflicts over 64 million people worldwide and is increasing in prevalence. The high hospital readmission rates do not only pose a tremendous burden on patient’s health status, morbidity, and mortality but also significantly increase national healthcare costs. In fact, two-thirds of HF hospitalisations can be prevented according to the leading experts. In order to reduce hospitalisations, traditional self-management require patients to log their weight and blood pressure daily in written plans of action that cover how to recognise and respond to a decompensation. However, the self-management require high adherence and active engagement from the patients and they are lack of predictive power.
+<br>
+<br>
+Due to the decreased cardiac output or increased blood pressure, fluid can accumulate in the entire body of CHF patients. Thus, we hypothesise that the vocal folds might be particularly sensitive to fluid accumulation in contrast to weight changes that may not be detected in time to prevent hospitalisation due to decompensation. For the current project, we aim to collect voice samples with mobile devices and using machine learning methods to investigate how voice characteristics fluctuations are associated with the health status changes of HF patients. Integrating passive voice analysis into patient self-care has the potential to reduce the burden on the patient while providing objective information with clinical valuable accuracy. We contribute towards the development of a novel digital prognostic vocal biomarker for CHF patients.
+</p>
+
+  </div>
+</div>
+
 <!-- contact info -->
 <!-- Row 1 -->
 <!-- PROJECT 1 -->
+
 <div class="row">
 
+<div class="col-md-3 order-1 mt-3">
+    <p><br>
+<!-- contact info --></p>
+    <div class="card shadow">
+
+  <img id="mypic" src="/assets/CSI%20figure_final.png" class="border-0 card-img-top" alt="me">
+
+
+  <div class="card-body pb-0 text-center">
+
+        <p>Project contact: <br> <a target="_blank" href="mailto:jshim@ethz.ch">Jinjoo Shim</a><br>
+  <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a></p>
+      </div>
+
+</div>
+
+  </div>
+
+<div class="col-md-9 order-2 mt-3">
+    <h2 id="digitalization-of-inflammatory-biomarkers-for-chronic-systemic-inflammation-csi">Digitalization of Inflammatory Biomarkers for Chronic Systemic Inflammation (CSI)</h2>
+    <p style="text-align:justify">
+Several studies have shown robust evidence between the <b>chronic systemic inflammation</b> (CSI) and increasing risk of various non-communicable diseases (NCDs) and mortality.  As opposed to an acute inflammatory response that is characterized as a temporary upregulation of inflammatory activity in response to a threat (e.g., bacterial infection), the CSI is a low-grade, non-infective state triggered by certain social, psychological, environmental and biological factors.  The prolonged CSI leads to major alterations in organs and fatal impairment of immune system of an individual, which triggers the onset and development of hypertension, hyperglycemia, type II diabetes, autoimmune diseases, cardiovascular disease, chronic kidney disease, several types of malignancies, depression and sarcopenia.  Since the NCDs significantly affect individuals (e.g., reduced life expectancy, poor quality of life), household (e.g., increased health expenditure), and macroeconomy (e.g., losses in economic growth), early diagnosis and timely treatment to intervene the CSI and risk factors associated with NCDs become critical.
+<br>
+<br>
+The C-reactive protein and cytokines (e.g., interleukin (IL)-1β, IL-6, IL-8, IL-10, and tumor necrosis factor-α) provide valuable insights on inflammatory activity.  Recent research has investigated the detection and quantification of these markers in body fluids other than serum such as urine, sweat, saliva, and exhaled breath of patients with various NCDs.  A non-invasive (digital) biomarker would help alleviate multiple burdens from invasive blood tests and contribute to the self-management of patients.  Furthermore, it would add significant values to clinicians and caregivers by enabling meaningful treatment and effective prevention of future events.
+<br>
+<br>
+Hence, this project aims to investigate 1) to what extent biomarkers indicating the presence of health-damaging chronic inflammation can be measured non-invasively; 2) to what extent these biomarkers can be digitalized applying AI/ML algorithms.
+</p>
+
+  </div>
+</div>
+
+<div class="row">
 <div class="col-md-3 order-1 mt-3">
     <p><br>
 <!-- contact info --></p>
@@ -150,8 +220,8 @@
 
   <div class="card-body pb-0 text-center">
 
-        <p>Project contact: <br> <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a><br>
-  <a target="_blank" href="mailto:dcleres@ethz.ch">David Cleres</a></p>
+        <p>Project contact: <br> <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a><br></p>
+
       </div>
 
 </div>
@@ -160,14 +230,14 @@
 
 <div class="col-md-9 order-2 mt-3">
     <h2 id="smartphone-based-cough-detection">Smartphone-Based Cough Detection</h2>
-    <p style="text-align:justify"> 
-Smartphone-based cough detection has the potential to enable cost-efficient and scalable home
+    <p style="text-align:justify">
+<b>Smartphone-based cough detection</b> has the potential to enable cost-efficient and scalable home
 monitoring for the most prevalent respiratory diseases such as asthma, COPD, and COVID-19. In previous
 research, we have established the feasibility of cough recognition from longitudinal smartphone-based
 audio recordings, i.e., an automated cough detection algorithm achieved results comparable to those
 of a human annotator by detecting coughs in audio files recorded by a smartphone. These results were
 published in leading digital health journals and conferences such as the <a href="https://www.jmir.org/2020/7/e18082" target="_blank" rel="noopener noreferrer">Journal of Medical Internet
-Research</a> and the <a href="https://ieeexplore.ieee.org/document/8904554" target="_blank" rel="noopener noreferrer">IEEE International Conference on Healthcare Informatics</a>. Also, the developed technology lead to the foundation of the startup <a href="https://www.resmonics.ai/" target="_blank" rel="noopener noreferrer">Resmonics AG</a>, a spin-off company of the Centre for Digital Health Interventions. Currently, we leverage this technology to investigate cough counts as a predictor for
+Research</a>, the <a href="https://ieeexplore.ieee.org/document/8904554" target="_blank" rel="noopener noreferrer">IEEE International Conference on Healthcare Informatics</a>, and the <a href="https://ieeexplore.ieee.org/document/9720192" target="_blank" rel="noopener noreferrer">IEEE Journal of Biomedical and Health Informatics</a>. Also, the developed technology lead to the foundation of the startup <a href="https://www.resmonics.ai/" target="_blank" rel="noopener noreferrer">Resmonics AG</a>, a spin-off company of the Centre for Digital Health Interventions. Currently, we leverage this technology to investigate cough counts as a predictor for
 disease progression.
 <br>
 
@@ -177,15 +247,14 @@ In this project, we leverage the cough detection technology to
 investigate the potential of a real-time cough monitoring system for the monitoring of COVID-19 patients
 and to associate hourly and daily cough counts with disease progression and intensive care unit admissions.
 To this end, 46 patients were recruited and were monitored during their hospital stay. Finally, the study
-received ethical approval (BASEC ID: 2020-00741) and was completed successfully. The first manuscript has been submitted. 
+received ethical approval (BASEC ID: 2020-00741) and was completed successfully. The first manuscript has been submitted.
 
 <br>
 <br>
 <h4> Smartphone-Based Cough Detection in COPD</h4>
 In this project, we employ smartphone-based cough monitoring to
 investigate the relation between daily and nightly cough counts with the course of disease in patients with
-chronic obstructive pulmonary disease (COPD) during and after an exacerbation. The study received ethical approval (BASEC ID: 2020-02207) and is currently ongoing. The progress of the study can be monitored
-<a href="https://hustenstudie.ethz.ch/." target="_blank" rel="noopener noreferrer">here</a>.
+chronic obstructive pulmonary disease (COPD) during and after an exacerbation. The study received ethical approval (BASEC ID: 2020-02207) and is currently ongoing.
 <br>
 
 
@@ -222,121 +291,21 @@ chronic obstructive pulmonary disease (COPD) during and after an exacerbation. T
 <!-- doi --><a href="http://dx.doi.org/10.1109/ICHI.2019.8904554" class="doi" target="_blank" rel="noopener noreferrer">doi</a>
 <!-- url --></p>
 
-  </div>
-
-<div class="col-md-3 order-2">
-
-  </div>
-
-</div>
-
-<!-- Row 2 -->
-<!-- PROJECT 2 -->
-<div class="row">
-
-<div class="col-md-3 order-1 mt-3">
-    <p><br>
-<!-- contact info --></p>
-    <div class="card shadow">
-
-  <img id="mypic" src="/assets/lena.png" class="border-0 card-img-top" alt="me">
-
-
-  <div class="card-body pb-0 text-center">
-
-        <p>Project contact: <br>
-  <a target="_blank" href="mailto:dcleres@ethz.ch">David Cleres</a>
-  <br> <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a><br></p>
-      </div>
-
-</div>
-
-  </div>
-
-<div class="col-md-9 order-2 mt-3">
-    <h2 id="smart-speaker-for-remote-patient-monitoring">Smart Speaker for Remote Patient Monitoring</h2>
-    <p style="text-align:justify"> 
-Smart speaker technology has the potential to enable
-remote patient monitoring by facilitating the collection and sharing of health-related information [1]. This
-is especially relevant for the elderly target population. In this project, a smart speaker system based on
-Raspberry Pi was built to acquire clinically validated surveys and its acceptance among COPD patients was
-evaluated [2]. A short demonstration in German can be found 
-<a href="https://vimeo.com/484933117/287f93eb69" target="_blank" rel="noopener noreferrer">here</a>.
-</p>
-
-    <p><br></p>
-
-    <li type="1"><b>Voice-Based Conversational Agents for the Prevention and Management of Chronic and Mental Health Conditions: Systematic Literature Review</b></li>
+    <li type="1"><b>TripletCough: Cougher Identification and Verification from Contact-Free Smartphone-Based Audio Recordings Using Metric Learning</b></li>
     <!-- status (e.g., accepted) -->
     <!-- award -->
     <!-- publisher -->
-    <p><em>Journal of Medical Internet Research</em>, March 2021.
+    <p><em>IEEE Journal of Biomedical and Health Informatics</em>, February 2022.
 <br>
-<!-- authors -->Bérubé, C., Schachner, T., Keller, R., Fleisch, E., v Wangenheim, F., Barata, F.<sup>+</sup>, and Kowatsch, T.<sup>+</sup>
-<!-- note --><em>(<sup>+</sup>co-last authors)</em>
+<!-- authors -->Jokic, S.<sup>+</sup>, Cleres, D., Rassouli, F., Steurer-Stey, C.,  Puhan, M.A., Brutsche, M., Fleisch, E., Barata, F.<sup>+</sup>
+<!-- note --><em>(<sup>+</sup>First and last author contributed equally.)</em>
 <br>
 <!-- pdf -->
 <!-- google scholar -->
 <!-- slides -->
 <!-- code -->
-<!-- doi --><a href="http://dx.doi.org/10.2196/25933" class="doi" target="_blank" rel="noopener noreferrer">doi</a>
+<!-- doi --><a href="https://doi.org/10.1109/JBHI.2022.3152944" class="doi" target="_blank" rel="noopener noreferrer">doi</a>
 <!-- url --></p>
-
-    <li type="1"><b>Lena: a Voice-Based Conversational Agent for Remote Patient Monitoring in Chronic Obstructive Pulmonary Disease</b></li>
-    <!-- status (e.g., accepted) -->
-    <!-- award -->
-    <p>In <!-- publisher --><em>Joint Proceedings of the ACM IUI 2021 Workshops, co-located with 26th ACM Conference on Intelligent User Interfaces (ACM IUI 2021)</em>, July 2021.
-<br>
-<!-- authors -->Cleres, D.**, Rassouli, F., Brutsche, M., Kowatsch, T., and Barata, F.
-<!-- note -->
-<br>
-<!-- pdf --><a href="papers/Cleres2021-HEALTHI.pdf" class="pdf">pdf</a>
-<!-- google scholar -->
-<!-- slides -->
-<!-- code -->
-<!-- doi -->
-<!-- url --><a href="http://ceur-ws.org/Vol-2903/" class="url" target="_blank" rel="noopener noreferrer">url</a></p>
-
-  </div>
-
-<div class="col-md-3 order-2">
-
-  </div>
-
-</div>
-
-<!-- Row 3 -->
-<!-- PROJECT 3 -->
-<div class="row">
-
-<div class="col-md-3 order-1 mt-3">
-    <p><br>
-<!-- contact info --></p>
-    <div class="card shadow">
-
-  <img id="mypic" src="/assets/chf.jpg" class="border-0 card-img-top" alt="me">
-
-
-  <div class="card-body pb-0 text-center">
-
-        <p>Project contact: <br>
-  <a target="_blank" href="mailto:dcleres@ethz.ch">David Cleres</a>
-  <br> <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a><br>
-  <a target="_blank" href="mailto:fanwu@ethz.ch">Fan Wu</a></p>
-      </div>
-
-</div>
-
-  </div>
-
-<div class="col-md-9 order-2 mt-3">
-    <h2 id="voice-monitoring-system-for-patients-with-congestive-heart-failure">Voice Monitoring System for Patients with Congestive Heart Failure</h2>
-    <p style="text-align:justify"> 
-<b>Congestive Heart failure</b> is a leading cause of death characterized by high hospitalization rates. Early detection of decompensation, i.e., the inability of the heart to maintain adequate circulation, could prevent hospital admissions. Conventionally, weight changes, an indicator of fluid accumulation, have been used to detect health deteriorations. However, the evidence in support of daily monitoring of weight and symptoms using remote patient monitoring is inconclusive. 
-The analysis of daily collected voice samples from smartphones and smart speakers has the potential to provide a cost-effective and scalable way to monitor patients with heart failure.
-<br>
-In this project, our objective is to develop and evaluate a novel <b>smartphone-based voice monitoring system</b> for patients with heart failure. To this end, we develop <b>Machine Learning</b> and <b>Deep Learning</b>  models able to <b> recognize patterns in the voice</b>  of patients, which could indicate a worsening in their chronic condition. Detection of such changes could help prevent adverse health outcomes and thus, reduce hospitalizations and readmissions of patients with heart failure. 
-</p>
 
   </div>
 
@@ -410,7 +379,73 @@ In this project, we aim to push the frontier in cough detection research by impr
 </p>
   </div>
 
+<div class="row">
 
+<div class="col-md-3 order-1 mt-3">
+      <p><br>
+<!-- contact info --></p>
+      <div class="card shadow">
+
+  <img id="mypic" src="/assets/lena.png" class="border-0 card-img-top" alt="me">
+
+
+  <div class="card-body pb-0 text-center">
+
+          <p>Project contact: <br>
+  <a target="_blank" href="mailto:dcleres@ethz.ch">David Cleres</a>
+  <br> <a target="_blank" href="mailto:fbarata@ethz.ch">Filipe Barata</a><br></p>
+        </div>
+
+</div>
+
+    </div>
+
+<div class="col-md-9 order-2 mt-3">
+      <h2 id="smart-speaker-for-remote-patient-monitoring">Smart Speaker for Remote Patient Monitoring</h2>
+      <p style="text-align:justify"> 
+Smart speaker technology has the potential to enable
+remote patient monitoring by facilitating the collection and sharing of health-related information [1]. This
+is especially relevant for the elderly target population. In this project, a smart speaker system based on
+Raspberry Pi was built to acquire clinically validated surveys and its acceptance among COPD patients was
+evaluated [2]. A short demonstration in German can be found 
+<a href="https://vimeo.com/484933117/287f93eb69" target="_blank" rel="noopener noreferrer">here</a>.
+</p>
+
+      <p><br></p>
+
+      <li type="1"><b>Voice-Based Conversational Agents for the Prevention and Management of Chronic and Mental Health Conditions: Systematic Literature Review</b></li>
+      <!-- status (e.g., accepted) -->
+      <!-- award -->
+      <!-- publisher -->
+      <p><em>Journal of Medical Internet Research</em>, March 2021.
+<br>
+<!-- authors -->Bérubé, C., Schachner, T., Keller, R., Fleisch, E., v Wangenheim, F., Barata, F.<sup>+</sup>, and Kowatsch, T.<sup>+</sup>
+<!-- note --><em>(<sup>+</sup>co-last authors)</em>
+<br>
+<!-- pdf -->
+<!-- google scholar -->
+<!-- slides -->
+<!-- code -->
+<!-- doi --><a href="http://dx.doi.org/10.2196/25933" class="doi" target="_blank" rel="noopener noreferrer">doi</a>
+<!-- url --></p>
+
+      <li type="1"><b>Lena: a Voice-Based Conversational Agent for Remote Patient Monitoring in Chronic Obstructive Pulmonary Disease</b></li>
+      <!-- status (e.g., accepted) -->
+      <!-- award -->
+      <p>In <!-- publisher --><em>Joint Proceedings of the ACM IUI 2021 Workshops, co-located with 26th ACM Conference on Intelligent User Interfaces (ACM IUI 2021)</em>, July 2021.
+<br>
+<!-- authors -->Cleres, D.**, Rassouli, F., Brutsche, M., Kowatsch, T., and Barata, F.
+<!-- note -->
+<br>
+<!-- pdf --><a href="papers/Cleres2021-HEALTHI.pdf" class="pdf">pdf</a>
+<!-- google scholar -->
+<!-- slides -->
+<!-- code -->
+<!-- doi -->
+<!-- url --><a href="http://ceur-ws.org/Vol-2903/" class="url" target="_blank" rel="noopener noreferrer">url</a></p>
+
+    </div>
+</div>
 
 </div>
 
