--- a/research.html
+++ b/research.html
@@ -135,6 +135,23 @@
 
 <h2 id="publications">Publications</h2>
 
+<p><br><big><strong>2022</strong></big></p>
+
+<p><strong>TripletCough: Cougher Identification and Verification from Contact-Free Smartphone-Based Audio Recordings Using Metric Learning</strong>
+<!-- status (e.g., accepted) -->
+<!-- award -->
+<br><!-- publisher --><em>IEEE Journal of Biomedical and Health Informatics</em>, February 2022.
+<br>
+<!-- authors -->Jokic, S.<sup>+</sup>, Cleres, D., Rassouli, F., Steurer-Stey, C.,  Puhan, M.A., Brutsche, M., Fleisch, E., Barata, F.<sup>+</sup>
+<!-- note --><em>(<sup>+</sup>First and last author contributed equally.)</em>
+<br>
+<!-- pdf -->
+<!-- google scholar -->
+<!-- slides -->
+<!-- code -->
+<!-- doi --><a href="https://doi.org/10.1109/JBHI.2022.3152944" class="doi" target="_blank" rel="noopener noreferrer">doi</a>
+<!-- url --></p>
+
 <p><br><big><strong>2021</strong></big></p>
 
 <p><strong>FLIRT: A feature generation toolkit for wearable data</strong>
