--- a/team.html
+++ b/team.html
@@ -187,7 +187,7 @@ All research projects are joint efforts of industry and academia; their results 
 
 
  <div class="card-body pb-0 text-center">
-        <p>Office: WEV G219 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br> 
+        <p>Office: WEV G214 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br> 
  Email: <a target="_blank" href="mailto:fbarata@ethz.ch">fbarata@ethz.ch</a><br>
   <a href="https://www.orcid.org/0000-0002-3905-2380" target="_blank" rel="noopener noreferrer"><i class="fab fa-orcid" aria-hidden="true"></i></a><a href="https://www.github.com/pipo3000" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/filipe-barata/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="https://www.twitter.com/fbar3000" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" aria-hidden="true"></i></a><a href="https://www.researchgate.net/profile/Filipe-Barata-3" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate" aria-hidden="true"></i></a></p>
       </div>
@@ -222,7 +222,7 @@ Filipe Barata holds a diploma (M.Sc.) in electrical engineering and information 
 
 
  <div class="card-body pb-0 text-center">
-        <p>Office: WEV G219 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br>
+        <p>Office: WEV G214 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br>
  Email: <a target="_blank" href="mailto:fanwu@ethz.ch">fanwu@ethz.ch</a><br>
   <a href="https://github.com/Fan-loewe" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/fan-wu-9a6b97188" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin" aria-hidden="true"></i></a></p>
       </div>
@@ -251,16 +251,13 @@ Fan Wu obtained her bachelor's degree in electrical engineering and automation f
     <!-- contact info -->
     <div class="card shadow">
 
-  <img id="mypic" src="/assets/david.jpg" class="border-0 card-img-top" alt="me">
- 
+  <img id="mypic" src="/assets/jinjooshim.jpg" class="border-0 card-img-top" alt="me">
 
-  <div class="card-body pb-0 text-center">
-        <p>Office: WEV G217 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br> 
-  <!-- **Phone:** <br/> -->
-  Email: <a target="_blank" href="mailto:dcleres@ethz.ch">dcleres@ethz.ch</a><br> 
-  <!-- **Teaching:** [Computer Security Spring'21](https://www.traviswpeters.com/cs476-2021-spring/)<br/> -->
-  <!-- {:.card-subtitle .small} -->
-  <a href="https://github.com/dcleres" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/david-cleres/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="https://www.researchgate.net/profile/David-Cleres" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate" aria-hidden="true"></i></a></p>
+
+ <div class="card-body pb-0 text-center">
+        <p>Office: WEV G214 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br>
+ Email: <a target="_blank" href="mailto:fanwu@ethz.ch">jshim@ethz.ch</a><br>
+  <a href="https://ch.linkedin.com/in/jinjooshim" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin" aria-hidden="true"></i></a></p>
       </div>
 
 </div>
@@ -268,16 +265,24 @@ Fan Wu obtained her bachelor's degree in electrical engineering and automation f
   </div>
 
 <div class="col-md-9 order-2 mt-3">
-    <p style="text-align:justify"> 
+    <p style="text-align:justify">
 
-<b>David Cleres</b> is a Ph.D. Candidate and doctoral student at the Center for Digital Health Interventions since June 2020. David holds a Master’s degree in Computational Science and Engineering from EPFL and a Bachelor’s degree in Bioengineering from EPFL. <br><br>Before joining our team, David had the opportunity to develop a broad set of skills in the field of Computer Vision through his Master Thesis conducted at UC Berkeley and his previous Data Engineer position at an Eye-Tracking specialised Start-up. Within his Ph.D. he will work on a vocal digital biomarker for chronic diseases.
+<b>Jinjoo Shim</b> is a Ph.D. candidate and doctoral student at the Center for Digital Health Interventions since October 2021. As part of her PhD, she will work on a vocal digital biomarker for congestive heart failure.
+<br>
+<br>
+Jinjoo Shim holds a diploma (M.Sc.) in Biostatistics at Columbia University in the City of New York. Before joining the Centre for Health Interventionsn, she worked as a data scientist, a biostatistician, and an epidemiologist. She collaborated in clinical and non-clinical research projects examining cost-effectiveness, patient outcomes, social value of treatment, drug utilization, efficacy, quality of care, regulatory guidelines using various real world data (e.g. national-level claims, EHR, registries, omics).
+<br>
+<br>
+
 </p>
 
   </div>
 
 </div>
+
 <h2> Master &amp; Bachelor Students </h2>
 
+<h2> Alumni &amp; Former Students</h2>
 <div class="row">
 
 <div class="col-md-3 order-1 mt-3">
@@ -363,6 +368,38 @@ In his Bachelor thesis at our lab, he developed a machine learning model for spe
 </p>
 
   </div>
+</div>
+
+<div class="row">
+
+<div class="col-md-3 order-1 mt-3">
+    <!-- contact info -->
+    <div class="card shadow">
+
+  <img id="mypic" src="/assets/david.jpg" class="border-0 card-img-top" alt="me">
+ 
+
+  <div class="card-body pb-0 text-center">
+        <p>Office: WEV G217 <a target="_blank" href="https://im.ethz.ch/the-group/how-to-find-us.html" rel="noopener noreferrer"><i class="fas fa-map-pin"></i></a><br> 
+  <!-- **Phone:** <br/> -->
+  Email: <a target="_blank" href="mailto:dcleres@ethz.ch">dcleres@ethz.ch</a><br> 
+  <!-- **Teaching:** [Computer Security Spring'21](https://www.traviswpeters.com/cs476-2021-spring/)<br/> -->
+  <!-- {:.card-subtitle .small} -->
+  <a href="https://github.com/dcleres" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a><a href="https://www.linkedin.com/in/david-cleres/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin" aria-hidden="true"></i></a><a href="https://www.researchgate.net/profile/David-Cleres" target="_blank" rel="noopener noreferrer"><i class="fab fa-researchgate" aria-hidden="true"></i></a></p>
+      </div>
+
+</div>
+
+  </div>
+
+<div class="col-md-9 order-2 mt-3">
+    <p style="text-align:justify"> 
+
+<b>David Cleres</b> is a Ph.D. Candidate and doctoral student at the Center for Digital Health Interventions since June 2020. David holds a Master’s degree in Computational Science and Engineering from EPFL and a Bachelor’s degree in Bioengineering from EPFL. <br><br>Before joining our team, David had the opportunity to develop a broad set of skills in the field of Computer Vision through his Master Thesis conducted at UC Berkeley and his previous Data Engineer position at an Eye-Tracking specialised Start-up. Within his Ph.D. he will work on a vocal digital biomarker for chronic diseases.
+</p>
+
+  </div>
+
 </div>
 
 
