--- a/news.html
+++ b/news.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>ADAMMA <br> <h6> Core for AI & Digital Biomarker, <br>Acoustic and Inflammatory Biomarkers </h6></title>
+  <title>ADAMMA, Core for AI & Digital Biomarker, Acoustic and Inflammatory Biomarkers</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -72,7 +72,7 @@
 <nav class="nav navbar navbar-expand-md navbar-static-top navbar-light bg-white">
 
     <!-- title item -->
-    <a class="navbar-brand" href="/">ADAMMA <br> <h6> Core for AI &amp; Digital Biomarker, <br>Acoustic and Inflammatory Biomarkers </h6></a>
+    <a class="navbar-brand" href="/">ADAMMA <br> <h6> Core for AI &amp; Digital Biomarker, <br>Acoustic and Inflammatory Biomarkers</h6></a>
 
     <!-- toggle -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -139,7 +139,7 @@
 
 <p><i class="far fa-newspaper"></i> <strong>January 03, 2022</strong><br>I am excited to announce that <b>Jinjoo Shim</b> started at our group! She will be working on the digitalization of of inflammatory biomarkers for chronic systemic inflammation.</p>
 
-<p><i class="far fa-newspaper"></i> <strong>October 01, 2021</strong><br>I am excited to announce that <b>Fan Wu</b> started at our group! She will be working on digital vocal biomarkers for patients with congestive heart failure</p>
+<p><i class="far fa-newspaper"></i> <strong>October 01, 2021</strong><br>I am excited to announce that <b>Fan Wu</b> started at our group! She will be working on digital vocal biomarkers for patients with congestive heart failure.</p>
 
 <p><i class="far fa-newspaper"></i> <strong>July 14, 2021</strong><br>I am excited to announce that our paper <b>Lena: a Voice-Based Conversational Agent for Remote Patient Monitoring in Chronic Obstructive Pulmonary Disease</b> with David Cleres, Frank Rassouli, Martin Brutsche, Tobias Kowatsch, and Filipe Barata has been published at the <a href="http://ceur-ws.org/Vol-2903/" target="_blank" rel="noopener noreferrer">Healthy Interfaces Workshop - HEALTHI</a> collocated with the <a href="https://iui.acm.org/2021/" target="_blank" rel="noopener noreferrer">ACM IUI 2021</a> Manuscript is available <a href="papers/Cleres2021-HEALTHI.pdf">here</a>.</p>
 
