--- a/research.html
+++ b/research.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-  <title>ADAMMA <br> <h6> Core for AI & Digital Biomarker, <br>Acoustic and Inflammatory Biomarkers </h6></title>
+  <title>ADAMMA, Core for AI & Digital Biomarker, Acoustic and Inflammatory Biomarkers</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -72,7 +72,7 @@
 <nav class="nav navbar navbar-expand-md navbar-static-top navbar-light bg-white">
 
     <!-- title item -->
-    <a class="navbar-brand" href="/">ADAMMA <br> <h6> Core for AI &amp; Digital Biomarker, <br>Acoustic and Inflammatory Biomarkers </h6></a>
+    <a class="navbar-brand" href="/">ADAMMA <br> <h6> Core for AI &amp; Digital Biomarker, <br>Acoustic and Inflammatory Biomarkers</h6></a>
 
     <!-- toggle -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
