updated Jinjoo's profile

--- a/team.html
+++ b/team.html
@@ -267,7 +267,7 @@ Fan Wu obtained her bachelor's degree in electrical engineering and automation f
 <div class="col-md-9 order-2 mt-3">
     <p style="text-align:justify">
 
-<b>Jinjoo Shim</b> is a Ph.D. candidate and doctoral student at the Center for Digital Health Interventions since October 2021. As part of her PhD, she will work on a vocal digital biomarker for congestive heart failure.
+<b>Jinjoo Shim</b> is a Ph.D. candidate and doctoral student at the Center for Digital Health Interventions since January 2022. As part of her PhD, she will work on the digitalization of of inflammatory biomarkers for chronic systemic inflammation (CSI).
 <br>
 <br>
 Jinjoo Shim holds a diploma (M.Sc.) in Biostatistics at Columbia University in the City of New York. Before joining the Centre for Health Interventionsn, she worked as a data scientist, a biostatistician, and an epidemiologist. She collaborated in clinical and non-clinical research projects examining cost-effectiveness, patient outcomes, social value of treatment, drug utilization, efficacy, quality of care, regulatory guidelines using various real world data (e.g. national-level claims, EHR, registries, omics).
