updated project pic

--- a/projects.html
+++ b/projects.html
@@ -131,7 +131,7 @@
 
 
 <h1 class="mt-4 mb-2"></h1>
-  
+
 <h2 id="projects--">Projects  <a href="https://github.com/ADAMMA-CDHI-ETH-Zurich" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a>
 </h2>
 
@@ -181,7 +181,7 @@ Due to the decreased cardiac output or increased blood pressure, fluid can accum
 <!-- contact info --></p>
     <div class="card shadow">
 
-  <img id="mypic" src="/assets/CSI%20figure_final.png" class="border-0 card-img-top" alt="me">
+  <img id="mypic" src="/assets/CSI%20figure_long.png" class="border-0 card-img-top" alt="me">
 
 
   <div class="card-body pb-0 text-center">
