--- a/team.html
+++ b/team.html
@@ -281,6 +281,34 @@ Jinjoo Shim holds a diploma (M.Sc.) in Biostatistics at Columbia University in t
 </div>
 
 <h2> Master &amp; Bachelor Students </h2>
+<div class="row">
+
+<div class="col-md-3 order-1 mt-3">
+    <!-- contact info -->
+    <div class="card shadow">
+
+  <img id="mypic" src="/assets/mklausmann.jpg" class="border-0 card-img-top" alt="me">
+
+
+ <div class="card-body pb-0 text-center">
+        <p>Email: <a target="_blank" href="mailto:mklausmann@student.ethz.ch">mklausmann@student.ethz.ch</a><br></p>
+      </div>
+
+</div>
+
+  </div>
+
+<div class="col-md-9 order-2 mt-3">
+    <p style="text-align:justify">
+
+<b>Mike Klausmann</b> is a Software engineer and MAS student at ETH Zurich.
+<br>
+<br>
+Mike Klausmann holds a diploma (M.Sc.) in computer science from ETH Zurich. Since his graduation in 2011, he worked as a software developer for the Inventage AG, where he participated in several projects in the fintech sector. In 2020 he started his MAS at the MTEC department and is currently working on his thesis at the Center for Digital Health Interventions at ETH Zurich.
+</p>
+
+  </div>
+</div>
 
 <h2> Alumni &amp; Former Students</h2>
 <div class="row">
